--- a/account/m_account_invite.html
+++ b/account/m_account_invite.html
@@ -23,7 +23,7 @@
 		</div>
 		<div class="middle">
 			<h3>邀请链接</h3>
-      <textarea id="share_link" name="share-reg-url" rows="2" cols="20"></textarea>
+      <textarea id="share_link" name="share-reg-url" rows="2" cols="20" readonly="readonly"></textarea>
       <div id="share" class="share-btn"><img src="../images/share-friend.png"/></div>
 			<!-- <div class="yqm-bg"><p class="yao-qing-ma">{{user.invite_code}}</p></div> -->
 		</div>
