--- a/html/m_detail_welfare.html
+++ b/html/m_detail_welfare.html
@@ -156,7 +156,7 @@
 		    			success:function(ret){
 		    				if(ret.code==0){
 		    					mui.openWindow({
-		    			            url: "html/m_get_coupon_success.html",
+		    			            url: "m_get_coupon_success.html",
 		    			            id:"coupon_success",
 		    			            styles: {
 		    			                top: 0,
