--- a/html/m_get_coupon_success.html
+++ b/html/m_get_coupon_success.html
@@ -52,6 +52,9 @@
 			var exp_url = self.exp_url.replace(/\s+/g,'');
 			plus.runtime.openURL(exp_url);
 		});
+		document.getElementById("seeCoupon").addEventListener('tap',function(event){
+			mui.openWindow('../account/m_account_coupon.html','account_coupon');
+		});
     });
     
     </script>
