--- a/m_account_index.html
+++ b/m_account_index.html
@@ -135,6 +135,7 @@
 					}
 				});
 				window.addEventListener('login-refresh', function() {
+					console.log('treeee');
 					var info = UserInfo.userinfo();
 					display_userinfo(info);
 				});
