--- a/m_welfare.html
+++ b/m_welfare.html
@@ -293,7 +293,15 @@
     				if (e.index == 1) {
     					return;
     				} else {
-    					plus.runtime.openURL("weixin://");
+//  					var url='itms-apps://itunes.apple.com/cn/app/';
+//  					plus.runtime.openURL(url);
+////  					plus.runtime.openURL("weixin://",function(){
+////							plus.nativeUI.confirm("检查到您未安装qq，请先到appstore搜索下载？", function(i) {
+////	                            if (i.index == 0) {
+////	                                iosAppstore("itunes.apple.com/cn/app/mqq/");
+////	                            }
+////	                        });
+////						});
     				}
     			});
             });
