--- a/html/m_detail_task.html
+++ b/html/m_detail_task.html
@@ -143,7 +143,9 @@
 						exp_url = exp_url.replace(/\s+/g,'');
 //						browserWebview.loadURL(exp_url);
 //						browserMainWebview.show('pop-in', 200);
-						plus.runtime.openURL(exp_url);
+						plus.runtime.openURL(exp_url,function(){
+							plus.nativeUI.confirm("检查到您未安装相应的客户端，请先到应用商店搜索下载");
+						});
 					}
 					else{
 						var btnArray = ['取消', '确认领取'];
