--- a/account/m_joinQQGroup.html
+++ b/account/m_joinQQGroup.html
@@ -82,13 +82,7 @@
 	                	var qq_number = "479560713";
 	                	var key = "cb1b818f13403c9cf3d1a3081e6588471b384a5f4ed8420a6e2f72f781c3ebd2";
 	                	var url = "mqqapi://card/show_pslcard?src_type=internal&version=1&uin=" + qq_number + "&key=" + key + "&card_type=group&source=external";
-						plus.runtime.openURL(url, function(){
-							plus.nativeUI.confirm("检查到您未安装qq，请先到appstore搜索下载？", function(i) {
-	                            if (i.index == 0) {
-	                                iosAppstore("itunes.apple.com/cn/app/mqq/");
-	                            }
-	                        });
-						});
+						ios_qq(url);
 					}
 				});
 				document.getElementById("qq_task").addEventListener("tap",function(){
@@ -104,13 +98,7 @@
 	                	var qq_number = "334255911";
 	                	var key = "52d2137a8e032b8b1b913531907c3e58b304b47e13a559de275fc55d239a5e7e";
 	                	var url = "mqqapi://card/show_pslcard?src_type=internal&version=1&uin=" + qq_number + "&key=" + key + "&card_type=group&source=external";
-						plus.runtime.openURL(url, function(){
-							plus.nativeUI.confirm("检查到您未安装qq，请先到appstore搜索下载？", function(i) {
-	                            if (i.index == 0) {
-	                                iosAppstore("itunes.apple.com/cn/app/mqq/");
-	                            }
-	                        });
-						});
+						ios_qq(url);
 					}
 				});
 				document.getElementById("qq_finance").addEventListener("tap",function(){
@@ -126,15 +114,19 @@
 	                	var qq_number = "365910596";
 	                	var key = "45d1d3a81f87ff5f82247801e63d7619cfff9811e9f9c233cca2d8901f00ec99";
 	                	var url = "mqqapi://card/show_pslcard?src_type=internal&version=1&uin=" + qq_number + "&key=" + key + "&card_type=group&source=external";
-						plus.runtime.openURL(url, function(){
-							plus.nativeUI.confirm("检查到您未安装qq，请先到appstore搜索下载？", function(i) {
-	                            if (i.index == 0) {
-	                                iosAppstore("itunes.apple.com/cn/app/mqq/");
-	                            }
-	                        });
-						});
+						ios_qq(url);
 					}
 				});
+				function ios_qq(url){
+					plus.runtime.openURL(url, function(){
+						plus.nativeUI.confirm("检查到您未安装QQ客户端，是否到appstore下载？", function(i) {
+                            if (i.index == 0) {
+                                var storeurl='itms-apps://itunes.apple.com/app/id444934666?mt=8';
+		    					plus.runtime.openURL(storeurl);
+                            }
+                        });
+					});
+				}
 		</script>
 	</body>
 
