--- a/html/m_detail_welfare.html
+++ b/html/m_detail_welfare.html
@@ -142,7 +142,18 @@
 				if (type==="hongbao"){
 					exp_url = exp_url.replace(/\s+/g,'');
 					plus.runtime.openURL(exp_url,function(){
-						plus.nativeUI.confirm("检查到您未安装相应的客户端，请先到应用商店搜索下载");
+						if (plus.os.name == "Android") {
+			                plus.nativeUI.confirm("检查到您未安装相应的客户端，请先到应用商店搜索下载");
+		                }
+		                else if (plus.os.name == "iOS") {
+		                	var btnArray = ['取消','去App Store'];
+							mui.confirm("抢红包需要在客户端中操作，请先到App Store中下载","您尚未安装相应的客户端", btnArray, function(i) {
+	                            if (i.index == 1) {
+	                                var storeurl='itms-apps://';
+			    					plus.runtime.openURL(storeurl);
+	                            }
+	                        });
+						}
 					});
 				}
 				else if (type==="youhuiquan"){
