--- a/html/m_baoyou.html
+++ b/html/m_baoyou.html
@@ -21,7 +21,7 @@
 			</div>
 		</div>
 		<!--回到顶部部分-->
-    	<a id="scrollToTop" class="backTop hide"> <span class="mui-icon mui-icon-arrowthinup"></span></a>
+    	<a id="scrollToTop" class="backTop hide"> <i class="icon iconfont">&#xe623;</i></a>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/UserInfo.js"></script>
 		<script>
