--- a/html/m_detail_information.html
+++ b/html/m_detail_information.html
@@ -12,7 +12,7 @@
 		<header id="header" class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">资讯详情</h1>
-			<a id="share" class="share iconfont icon-fenxiang"></a>
+			<!--<a id="share" class="share iconfont icon-fenxiang"></a>-->
 		</header>
 		<div class="mui-content">
 			<div class="story">
@@ -23,7 +23,7 @@
 		</div>
 
     <script src="../js/mui.min.js"></script>
-    <script src="../js/share.js"></script>
+    <!--<script src="../js/share.js"></script>-->
     <script type="text/javascript" charset="utf-8">
 	    mui.init();
 	    mui.ready(function(){
