--- a/m_welfare.html
+++ b/m_welfare.html
@@ -191,7 +191,7 @@
 				});
 				tempview = mui.preload({url:"", id:"temp",styles: {popGesture:'hide',hardwareAccelerated: true}});
 	      		tempview.addEventListener('hide',function(){
-	      			this.clear();
+	      			tempview.clear();
 	      		});
 	      		tempview2 = mui.preload({url:"", id:"temp2",styles: {popGesture:'hide',hardwareAccelerated: true}});
 	      		tempview2.addEventListener('hide',function(){
