--- a/html/m_detail_welfare.html
+++ b/html/m_detail_welfare.html
@@ -143,20 +143,31 @@
 				}
 				if (type==="hongbao"){
 					exp_url = exp_url.replace(/\s+/g,'');
-					plus.runtime.openURL(exp_url,function(){
-						if (plus.os.name == "Android") {
-			                plus.nativeUI.confirm("检查到您未安装相应的客户端，请先到应用商店搜索下载");
-		                }
-		                else if (plus.os.name == "iOS") {
-		                	var btnArray = ['取消','去App Store'];
-							mui.confirm("抢红包需要在客户端中操作，请先到App Store中下载","您尚未安装相应的客户端", btnArray, function(i) {
-	                            if (i.index == 1) {
-	                                var storeurl='itms-apps://';
-			    					plus.runtime.openURL(storeurl);
-	                            }
-	                        });
-						}
-					});
+					var httpStart = exp_url.indexOf("http");
+					if(httpStart==0){
+						var browserMainWebview = plus.webview.getWebviewById('browser_main');
+						var browserWebview = plus.webview.getWebviewById('browser_sub');
+						mui.fire(browserMainWebview, 'mui.view.beforeshow');
+						browserWebview.loadURL(exp_url);
+						browserMainWebview.show('pop-in', 200);
+					}
+					else{
+						plus.runtime.openURL(exp_url,function(){
+							if (plus.os.name == "Android") {
+				                plus.nativeUI.confirm("检查到您未安装相应的客户端，请先到应用商店搜索下载");
+			                }
+			                else if (plus.os.name == "iOS") {
+			                	var btnArray = ['取消','去App Store'];
+								mui.confirm("抢红包需要在客户端中操作，请先到App Store中下载","您尚未安装相应的客户端", btnArray, function(i) {
+		                            if (i.index == 1) {
+		                                var storeurl='itms-apps://';
+				    					plus.runtime.openURL(storeurl);
+		                            }
+		                        });
+							}
+						});
+					}
+					
 				}
 				else if (type==="youhuiquan"){
 					var obtain_coupon_url = "http://m.wafuli.cn/app/obtain_youhuiquan/";
