--- a/browser.html
+++ b/browser.html
@@ -3,7 +3,6 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>36氪 - 内置浏览器</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -29,12 +28,12 @@
 				<a id="loading" class="mui-icon">
 					<span class="mui-spinner"></span> &nbsp;
 				</a>
-				<a id="reload" class="mui-icon mui-icon-reload mui-hidden">&nbsp;</a>
+				<!--<a id="reload" class="mui-icon mui-icon-reload mui-hidden">&nbsp;</a>-->
 			</div>
 			<div class="mui-pull-right">
 				<button id="back" type="button" class="mui-action-back mui-btn">关闭</button>
 			</div>
-		    <h1 class="mui-title">挖福利-内置浏览器</h1>
+		    <h1 id="title" class="mui-title">挖福利-内置浏览器</h1>
 		</header>
 		
 		<script type="text/javascript" charset="UTF-8" src="js/mui.js"></script>
@@ -45,11 +44,13 @@
 					var browser = plus.webview.getWebviewById('browser_sub');
 					browser.addEventListener('hide', function() {
 						browser.clear();
+						titleElem.innerHTML = '';
 					});
 					mui.init({
-//						beforeback: function() {
-//							browser.clear();
-//						}
+						beforeback: function() {
+							browser.clear();
+							titleElem.innerHTML = '';
+						}
 					});
 					document.getElementById("historyBack").addEventListener('tap', function() {
 						browser.canBack(function(e) {
@@ -67,23 +68,27 @@
 						});
 						return false;
 					});
-					document.getElementById("reload").addEventListener('tap', function() {
-						reloadClassList.add('mui-hidden');
-						loadingClassList.remove('mui-hidden');
-						browser.reload(true);
-					});
-					var reloadClassList = document.getElementById("reload").classList;
+//					document.getElementById("reload").addEventListener('tap', function() {
+//						reloadClassList.add('mui-hidden');
+//						loadingClassList.remove('mui-hidden');
+//						browser.reload(true);
+//					});
+//					var reloadClassList = document.getElementById("reload").classList;
 					var loadingClassList = document.getElementById("loading").classList;
+					var titleElem = document.getElementById("title");
 					document.addEventListener('mui.view.beforeshow', function(e) {
+						var title = e.detail.title;
+						titleElem.innerHTML = title;
 						if (plus.networkinfo.getCurrentType() === plus.networkinfo.CONNECTION_NONE) {
 							plus.nativeUI.alert('无网络连接!');
 						} else {
-							reloadClassList.add('mui-hidden');
+//							reloadClassList.add('mui-hidden');
 							loadingClassList.remove('mui-hidden');
 						}
+//						plus.webview.currentWebview().show('pop-in', 200);
 					});
 					browser && browser.addEventListener('loaded', function() {
-						reloadClassList.remove('mui-hidden');
+//						reloadClassList.remove('mui-hidden');
 						loadingClassList.add('mui-hidden');
 					});
 				});
