--- a/account/m_account_change_zhifubao.html
+++ b/account/m_account_change_zhifubao.html
@@ -19,11 +19,11 @@
 					
 					<div class="mui-input-row">
 						<label>支付宝姓名</label>
-						<input id="zhifubao_name" type="text" placeholder="请输入支付宝姓名">
+						<input id="zhifubao_name" type="text" placeholder="请输入支付宝绑定的真实姓名">
 					</div>
 					<div class="mui-input-row">
 						<label>支付宝帐号</label>
-						<input id="zhifubao" type="text" placeholder="请输入支付宝帐号">
+						<input id="zhifubao" type="text" placeholder="请输入真实的支付宝账户">
 					</div>
 					<div class="mui-input-row">
 						<label>手机验证码</label>
@@ -69,6 +69,11 @@
 			document.getElementById("Btn").addEventListener('tap', function() {
 				var zhifubao = document.getElementById('zhifubao').value;
 				var zhifubao_name = document.getElementById('zhifubao_name').value;
+				var re_account=/^[\u2E80-\u9FFF]+$/;
+		        if(!re_account.test(zhifubao_name)){
+		          mui.alert("请输入正确的支付宝绑定的真实姓名");
+		          return;
+		        }
 				if (!zhifubao || !zhifubao_name){
 					mui.alert("支付宝账号或姓名不能为空！", '提示');
 					return;
