--- a/template.html
+++ b/template.html
@@ -146,7 +146,7 @@
 		document.getElementById("share").addEventListener('tap',function () {
 //			share_msg = {};
 			share_msg.title = titleElem.innerHTML;
-			share_msg.content = "想想这里填什么  @礼沂";
+//			share_msg.content = "想想这里填什么  @礼沂";
 			window.share.open(share_msg,function(ret){
 //				console.log(ret);
 			});
