--- a/html/m_activity_lottery.html
+++ b/html/m_activity_lottery.html
@@ -22,6 +22,7 @@
 				    </div>	
                     
               </div>
+              	<p class="tips">*此活动与苹果公司无关</p>
 				<div class="text clearfix">
 					<h4 class="text-01">抽奖方式</h4>
 					<p>①用户自行点击抽奖按钮启动大转盘，每人每天不限抽奖次数，每次抽奖消耗10积分作为启动能量；</p>
